Se sube el avance del proyecto

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <link rel="stylesheet" href="estilos.css">
     <title>Proyecto</title>
 </head>
+<nav class="nav">
+    <ul class="list">
+        <li class="item">
+            <a href="" class="link">INICIO</a>
+        </li>
+        <li class="item">
+            <a href="" class="link">Materiales</a>
+        </li>
+        <li class="item">
+            <a href="" class="link">Trabajadores</a>
+        </li>
+        <li class="item">
+            <a href="" class="link">Sobre nosotros</a>
+        </li>
+
 <body>
     <h2>Constructora los intocables</h2>
     <p>En esta Constructora nos enfocamos en mantener un orden impecable haciendo que no se pierdan materiales en nuestras obras</p>
@@ -19,6 +34,7 @@
     <br>
     <p>Compañero nuevo </p>
 
+   
     <h2>materiales disponibles en la constructora CESDE: <input list="materials"></h2>
     <datalist id="materials">
         <option value="Cemento"></option>
