--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li class="item">
             <a href="" class="link">Sobre nosotros</a>
         </li>
+        <a href="index1.html">Descripción</a>
 
 <body>
     <h2>Constructora los intocables</h2>
@@ -63,6 +64,7 @@
         <option value="Juan Camilo Martinez Agudelo"></option> 
         <option value="Daniel Felipe Muñoz Gómez"></option>
         <option value="Compañero Nuevo"></option>
+        
 </datalist>
 <p>CUANTOS MATERIALES SACARAS</p>
 
