--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <nav class="nav">
     <ul class="list">
         <li class="item">
-            <a href="" class="link">INICIO</a>
+            <a href="index.html" class="link">INICIO</a>
         </li>
         <li class="item">
-            <a href="" class="link">Materiales</a>
+            <a href="materiales.html" class="link">Materiales</a>
         </li>
         <li class="item">
-            <a href="" class="link">Trabajadores</a>
+            <a href="trabajadores.html" class="link">Trabajadores</a>
         </li>
         <li class="item">
-            <a href="" class="link">Sobre nosotros</a>
+            <a href="index1.html" class="link">Sobre nosotros</a>
         </li>
-        <a href="index1.html">Descripción</a>
+        
 
 <body>
     <h2>Constructora los intocables</h2>
@@ -33,7 +33,7 @@
     <br>
     <p>Daniel Felipe Muñoz Gómez</p>
     <br>
-    <p>Compañero nuevo </p>
+    <p>Daniel felipe gallego</p>
 
    
     <h2>materiales disponibles en la constructora CESDE: <input list="materials"></h2>
